--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Service worker demo</title>
+    <title>2Service worker demo</title>
 
     <link rel="stylesheet" href="style.css" />
     <!--[if lt IE 9]>
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <h1>Lego Star Wars gallery</h1>
+    <h1>Lego Star Wars gallery11111</h1>
 
     <section></section>
-
+    <img src="https://static.coinall.ltd/cdn/assets/imgs/221/02D05B5ABB57940A.png" alt="">
     <script type="module" src="app.js"></script>
   </body>
 </html>
